# solid

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  index.html  package.json  pyproject.toml  tsconfig.json  tsconfig.server.json  vite.config.ts
src/: main.py  shared.ts
src/agent/: loop.py
src/api/: openai.py  schemas.py
src/client/: ActivityLine.tsx  App.css  App.tsx  ChatColumn.tsx  DataPanel.tsx  FaviconImg.tsx  IterationCard.tsx  IterationLinks.tsx  MarkdownContent.tsx  RubricBars.tsx  SettingsForm.tsx  SiteLink.tsx  SolidLogo.tsx  SolidnessPanel.tsx  activity.ts  activity.tsx  export.ts  history.ts  i18n.ts  index.css  local-store.ts  main.tsx  models.ts  routes.ts  settings.ts  sites.ts  storage.ts  stream-client.ts  stream.ts  types.ts
src/client/i18n/: index.ts  translations.ts
src/client/locales/: de.json  en.json  es.json  fr.json  it.json  pt-BR.json  pt-PT.json
src/deepsearch/: config.py
src/deepsearch/agent/: prompts.py
src/deepsearch/api/: openai.py
src/search/: web.py
src/server/: api.ts  config.ts  favicon.ts  index.ts  search.ts
src/server/agent/: agent.test.ts  json.test.ts  json.ts  loop.ts  prompts.ts  schemas.ts  scoring.test.ts  scoring.ts
src/server/api/: openai.ts
src/server/favicon/: cache.ts  routes.ts
src/server/search/: fetch.ts  web.ts
src/shared/: domains.ts  rubric.ts  thresholds.ts  types.ts
