[project]
name = "deepsearch"
version = "0.1.0"
description = "OpenAI-compatible agent that iteratively researches and validates ideas via web search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=1.55.0",
    "httpx>=0.28.0",
    "duckduckgo-search>=7.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[project.scripts]
deepsearch = "main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build]
dev-mode-dirs = ["src"]
